Refactored code into a module to process bank product info.
Cleaned up where logs and datastore reside.

--- a/views/list-pulls.jade
+++ b/views/list-pulls.jade
@@ -7,7 +7,7 @@ block content
     each doc, i in model.pulls
         div(class="panel panel-default")
             div(class="panel-heading")
-                h3(class="panel-title") #{moment(doc.date).format("dddd, DD/MM/YYYY hh:mm A ZZ")} [#{doc.numRatesOfInterest} rate(s)]
+                h3(class="panel-title") #{moment(doc.date).format("dddd, Do of MMMM @ hh:mm A ZZ")} [#{doc.numRatesOfInterest} rate(s)]
             div(class="panel-body")
                 table(class="table table-striped table-bordered table-hover")
                     thead
