Development - see details.
Added view helpers and app constants modules.
Changed bootstrap theme to slate.
Added a call back to bank product JSON service’s process function.
Added adding of rate change events to the datasource.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title=viewHelpers.buildTitle(title)
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='/datatables/css/jquery.dataTables.css')
