--- a/views/list-pulls.jade
+++ b/views/list-pulls.jade
@@ -13,7 +13,7 @@ block content
                     thead
                         tr
                             th Product
-                            th Code
+                            th Rate Code
                             th Rate Type
                             th Rate Value
                     tbody
