--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,58 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+    h5 Latest Events
+    table(class="table table-striped table-bordered table-hover")
+        thead
+            tr
+                th Date
+                th Product
+                th Rate Code
+                th Rate Type
+                th Old Rate
+                th New Rate
+        tbody
+            each event, j in model.events
+                tr
+                    td #{moment(event.date).format(appConstants.DISPLAY_DATE_FORMAT)}
+                    td #{event.newRate.description}
+                    td #{event.newRate.code}
+                    td #{event.newRate.ratetype}
+                    td(class="danger") #{event.oldRate.ratevalue} #{event.oldRate.ratesuffix}
+                    td(class="success") #{event.newRate.ratevalue} #{event.newRate.ratesuffix}
+
+    h5 Latest Pull from ANZ Bank
+    if(model.pulls.length == 0)
+        div(class="panel panel-default")
+                div(class="panel-heading")
+                    h3(class="panel-title") Not Available Yet
+                div(class="panel-body")
+                    table(class="table table-striped table-bordered table-hover")
+                        thead
+                            tr
+                                th Product
+                                th Rate Code
+                                th Rate Type
+                                th Rate Value
+
+    else
+        each doc, i in model.pulls
+            div(class="panel panel-default")
+                div(class="panel-heading")
+                    h3(class="panel-title") #{moment(doc.date).format(appConstants.DISPLAY_DATE_FORMAT)} [#{doc.numRatesOfInterest} rate(s)]
+                div(class="panel-body")
+                    table(class="table table-striped table-bordered table-hover")
+                        thead
+                            tr
+                                th Product
+                                th Rate Code
+                                th Rate Type
+                                th Rate Value
+                        tbody
+                            each rate, j in doc.ratesOfInterest
+                                tr
+                                    td #{rate.description}
+                                    td #{rate.code}
+                                    td #{rate.ratetype}
+                                    td #{rate.ratevalue} #{rate.ratesuffix}
