--- a/views/list-events.jade
+++ b/views/list-events.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1.
+    h5.
         List of Events
 
     table(class="table table-striped table-bordered table-hover")
@@ -16,7 +16,7 @@ block content
         tbody
             each event, j in model.events
                 tr
-                    td #{moment(event.date).format("dddd, Do of MMMM @ hh:mm A ZZ")}
+                    td #{moment(event.date).format(appConstants.DISPLAY_DATE_FORMAT)}
                     td #{event.newRate.description}
                     td #{event.newRate.code}
                     td #{event.newRate.ratetype}
