--- a/views/list-pulls.jade
+++ b/views/list-pulls.jade
@@ -1,13 +1,13 @@
 extends layout
 
 block content
-    h1.
+    h5.
         List of Pulls from ANZ Bank
 
     each doc, i in model.pulls
         div(class="panel panel-default")
             div(class="panel-heading")
-                h3(class="panel-title") #{moment(doc.date).format("dddd, Do of MMMM @ hh:mm A ZZ")} [#{doc.numRatesOfInterest} rate(s)]
+                h3(class="panel-title") #{moment(doc.date).format(appConstants.DISPLAY_DATE_FORMAT)} [#{doc.numRatesOfInterest} rate(s)]
             div(class="panel-body")
                 table(class="table table-striped table-bordered table-hover")
                     thead
