Added HTML notify email support.
Added jumbtron to index page and about menu items to navbar.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,11 @@
 extends layout
 
 block content
+    .jumbotron
+      .container
+        p
+          | Watches interest rates at ANZ bank for specific products of interest, stores the changes over time and alerts changes via email.
+
 
     h5 Latest Events
     table(class="table table-striped table-bordered table-hover")
