--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,23 +11,31 @@ html
   body
     nav.navbar.navbar-default
       .container-fluid
-        // Brand and toggle get grouped for better mobile display
         .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#irwatcher-navbar', aria-expanded='false')
             span.sr-only Toggle navigation
             span.icon-bar
             span.icon-bar
             span.icon-bar
           a.navbar-brand IRWatcher
         // Collect the nav links, forms, and other content for toggling
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+        #irwatcher-navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href='/')
-                | Home
+                a(href='/')
+                    | Home
             li
-              a(href='/list-events') List Events
+                a(href='/list-events') List Events
             li
-              a(href='/list-pulls') List Pulls
+                a(href='/list-pulls') List Pulls
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                | About
+                span.caret
+              ul.dropdown-menu
+                li
+                    a(href='https://github.com/retroburst') Author on GitHub
+                li
+                    a(href='https://github.com/retroburst/IRWatcher') Source on GitHub
 
     block content
