--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title=viewHelpers.buildTitle(title)
+    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     script(src='/jquery/jquery.js')
