Fixed bootstrap issues.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,9 @@ html
     title=viewHelpers.buildTitle(title)
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
-    script(src='/jquery/jquery.js')
-    script(src='/bootstrap/js/bootstrap.js')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.slate.min.css')
+    script(src='/jquery/jquery.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
   body
     nav.navbar.navbar-default
       .container-fluid
