Changed media queries in css.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body { padding: 50px; }
-@media (min-width:320px) { body { padding: 2px;  } }
-@media (min-width:481px) { body { padding: 5px;  } }
-@media (min-width:641px) { body { padding: 5px;  } }
-@media (min-width:961px) { body { padding: 10px;  } }
+@media (max-width:320px) { body { padding: 2px;  } }
+@media (max-width:481px) { body { padding: 5px;  } }
+@media (max-width:641px) { body { padding: 5px;  } }
+@media (max-width:961px) { body { padding: 10px;  } }
