Added in memory tail of log events for diagnostics page.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,8 @@ html
                 a(href='/list-events') List Events
             li
                 a(href='/list-pulls') List Pulls
+            li
+                a(href='/diagnostics') Diagnostics
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
                 | About
