Fixed diagnostics timepoint problem.

--- a/views/diagnostics.jade
+++ b/views/diagnostics.jade
@@ -14,7 +14,7 @@ block content
                 td #{viewHelpers.formatDate(model.timepoints.lastCheckDate)}
                 td #{viewHelpers.formatDate(model.timepoints.nextCheckDate)}
                 td #{viewHelpers.formatDate(model.timepoints.lastPullDate)}
-                td #{viewHelpers.formatDate(model.timepoints.nextCheckDate)}
+                td #{viewHelpers.formatDate(model.timepoints.nextPullDate)}
 
     h5 Tail
     table(class="table table-striped table-bordered table-hover")
