--- a/views/diagnostics.jade
+++ b/views/diagnostics.jade
@@ -11,10 +11,10 @@ block content
                 th Next Pull
         tbody
             tr
-                td #{viewHelpers.formatDate(model.timepoints.lastCheckDate)}
-                td #{viewHelpers.formatDate(model.timepoints.nextCheckDate)}
-                td #{viewHelpers.formatDate(model.timepoints.lastPullDate)}
-                td #{viewHelpers.formatDate(model.timepoints.nextPullDate)}
+                td #{context.viewHelpers.formatDate(model.timepoints.lastCheckDate)}
+                td #{context.viewHelpers.formatDate(model.timepoints.nextCheckDate)}
+                td #{context.viewHelpers.formatDate(model.timepoints.lastPullDate)}
+                td #{context.viewHelpers.formatDate(model.timepoints.nextPullDate)}
 
     h5 Tail
     table(class="table table-striped table-bordered table-hover")
@@ -25,5 +25,5 @@ block content
             each log, j in model.tailLogBuffer
                 tr
                     td
-                        span(class=viewHelpers.generateClassForLogEntry(log)) &nbsp;
+                        span(class=context.viewHelpers.generateClassForLogEntry(log)) &nbsp;
                         span   #{log}
