--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ block content
         tbody
             each event, j in model.events
                 tr
-                    td #{moment(event.date).format(appConstants.DISPLAY_DATE_FORMAT)}
+                    td #{context.moment(event.date).format(appConstants.DISPLAY_DATE_FORMAT)}
                     td #{event.newRate.description}
                     td(class="danger") #{event.oldRate.ratevalue} #{event.oldRate.ratesuffix}
                     td(class="success") #{event.newRate.ratevalue} #{event.newRate.ratesuffix}
@@ -37,10 +37,10 @@ block content
                                 th Rate Value
 
     else
-        each doc, i in model.pulls
+        each pull, i in model.pulls
             div(class="panel panel-default")
                 div(class="panel-heading")
-                    h3(class="panel-title") #{moment(doc.date).format(appConstants.DISPLAY_DATE_FORMAT)} [#{doc.numRatesOfInterest} rate(s)]
+                    h3(class="panel-title") #{context.viewHelpers.formatDate(pull.date))} [#{pull.numRatesOfInterest} rate(s)]
                 div(class="panel-body")
                     table(class="table table-striped table-bordered table-hover")
                         thead
@@ -49,7 +49,7 @@ block content
                                 th Rate Code
                                 th Rate Value
                         tbody
-                            each rate, j in doc.ratesOfInterest
+                            each rate, j in pull.ratesOfInterest
                                 tr
                                     td #{rate.description}
                                     td #{rate.code}
