--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ block content
         tbody
             each event, j in model.events
                 tr
-                    td #{context.moment(event.date).format(appConstants.DISPLAY_DATE_FORMAT)}
+                    td #{context.viewHelpers.formatDate(event.date)}
                     td #{event.newRate.description}
                     td(class="danger") #{event.oldRate.ratevalue} #{event.oldRate.ratesuffix}
                     td(class="success") #{event.newRate.ratevalue} #{event.newRate.ratesuffix}
@@ -40,7 +40,7 @@ block content
         each pull, i in model.pulls
             div(class="panel panel-default")
                 div(class="panel-heading")
-                    h3(class="panel-title") #{context.viewHelpers.formatDate(pull.date))} [#{pull.numRatesOfInterest} rate(s)]
+                    h3(class="panel-title") #{context.viewHelpers.formatDate(pull.date)} [#{pull.numRatesOfInterest} rate(s)]
                 div(class="panel-body")
                     table(class="table table-striped table-bordered table-hover")
                         thead
