--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,3 +3,8 @@ body { padding: 50px; }
 @media (max-width:481px) { body { padding: 5px;  } }
 @media (max-width:641px) { body { padding: 5px;  } }
 @media (max-width:961px) { body { padding: 10px;  } }
+
+.inactive {
+    pointer-events: none;
+    cursor: default;
+}
