Various improvements. See description for details.
*Added simple pagination support for list events and list pulls.
*Refactored model building code to router helpers modules.
*Added Google analytics
*Reduced log tail size on diagnostics page
*Moved initial bank son sac check to after listen so it doesn’t hold up
http requests to express

--- a/views/diagnostics.jade
+++ b/views/diagnostics.jade
@@ -17,7 +17,7 @@ block content
                 td Next Pull
                 td #{context.viewHelpers.formatDate(model.timepoints.nextPullDate)}
 
-    h5 Tail
+    h5 Tail (last #{model.tailLogBuffer.length} logged events)
     table(class="table table-striped table-bordered table-hover")
         thead
             tr
