--- a/views/list-pulls.jade
+++ b/views/list-pulls.jade
@@ -21,3 +21,5 @@ block content
                                 td #{rate.description}
                                 td #{rate.code}
                                 td #{rate.ratevalue} #{rate.ratesuffix}
+
+    include ./includes/pagination.jade
