--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.slate.min.css')
     script(src='/jquery/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/googleAnalytics.js')
   body
     nav.navbar.navbar-default
       .container-fluid
