--- a/views/diagnostics.jade
+++ b/views/diagnostics.jade
@@ -1,20 +1,38 @@
 extends layout
 
 block content
+    h5 Details
+    table(class="table table-striped table-bordered table-hover")
+        tbody
+            tr
+                td.col-md-2 Application Version
+                td v#{context.version}
+            tr
+                td.col-md-2 Uptime
+                td #{context.viewHelpers.formatUptimeDuration()}
+            tr
+                td.col-md-2 Node.js Version
+                td #{process.version}
+            tr
+                td.col-md-2 Node.js Dependencies
+                td
+                    each val, index in process.versions
+                        div #{index + ' : ' + val}
+
     h5 Timepoints
     table(class="table table-striped table-bordered table-hover")
         tbody
             tr
-                td Last Check
+                td.col-md-2 Last Check
                 td #{context.viewHelpers.formatDate(model.timepoints.lastCheckDate)}
             tr
-                td Next Check
+                td.col-md-2 Next Check
                 td #{context.viewHelpers.formatDate(model.timepoints.nextCheckDate)}
             tr
-                td Last Pull
+                td.col-md-2 Last Pull
                 td #{context.viewHelpers.formatDate(model.timepoints.lastPullDate)}
             tr
-                td Next Pull
+                td.col-md-2 Next Pull
                 td #{context.viewHelpers.formatDate(model.timepoints.nextPullDate)}
 
     h5 Tail (last #{model.tailLogBuffer.length} logged events)
@@ -28,3 +46,5 @@ block content
                     td
                         span(class=context.viewHelpers.generateLabelClassForLogEntry(log)) &nbsp;
                         span   #{log}
+
+
