--- a/views/diagnostics.jade
+++ b/views/diagnostics.jade
@@ -8,6 +8,9 @@ block content
             col.col-md-10
         tbody
             tr
+                td Local Server Time
+                td #{model.localServerTime}
+            tr
                 td Application Version
                 td v#{context.version}
             tr
@@ -41,17 +44,11 @@ block content
             col.col-md-10
         tbody
             tr
-                td Last Check
-                td #{context.viewHelpers.formatDate(model.timepoints.lastCheckDate)}
+                td Last Scheduled Run
+                td #{context.viewHelpers.formatDate(model.bankProductJsonServiceRunInfo.last)}
             tr
-                td Next Check
-                td #{context.viewHelpers.formatDate(model.timepoints.nextCheckDate)}
-            tr
-                td Last Pull
-                td #{context.viewHelpers.formatDate(model.timepoints.lastPullDate)}
-            tr
-                td Next Pull
-                td #{context.viewHelpers.formatDate(model.timepoints.nextPullDate)}
+                td Next Scheduled Run
+                td #{context.viewHelpers.formatDate(model.bankProductJsonServiceRunInfo.next)}
 
     h5 Tail (last #{model.tailLogBuffer.length} logged events)
     table(class="table table-striped table-bordered table-hover")
