--- a/views/diagnostics.jade
+++ b/views/diagnostics.jade
@@ -8,7 +8,7 @@ block content
             col.col-md-10
         tbody
             tr
-                td Local Server Time
+                td Server Local Time
                 td #{model.localServerTime}
             tr
                 td Application Version
@@ -37,15 +37,12 @@ block content
                         div #{index + ' : ' + val}
 
 
-    h5 Timepoints
+    h5 Bank Product JSON Service Schedule
     table(class="table table-striped table-bordered table-hover fixed-table")
         colgroup
             col.col-md-2
             col.col-md-10
         tbody
-            tr
-                td Last Scheduled Run
-                td #{context.viewHelpers.formatDate(model.bankProductJsonServiceRunInfo.last)}
             tr
                 td Next Scheduled Run
                 td #{context.viewHelpers.formatDate(model.bankProductJsonServiceRunInfo.next)}
