Added meta data.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,11 @@ html
   head
     title=context.viewHelpers.buildTitle(title)
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
+    meta(name='application-name', content='IRWatcher')
+    meta(name='author', content='retroburst (Andrew D)')
+    meta(name='description', content='Watches interest rates at ANZ bank for specific products of interest, stores the changes over time and alerts changes via email.')
+    meta(name='keywords', content='bank,watch,rates,interest,ANZ')
+    meta(charset='utf-8')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.slate.min.css')
     script(src='/jquery/jquery.min.js')
